Add server decorators function and update schema for sets, gems and odds

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@ebay/nice-modal-react": "^1.2.13",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
@@ -63,6 +64,7 @@
     "react-icons": "^5.3.0",
     "react-resizable-panels": "^2.1.4",
     "react-spinners": "^0.14.1",
+    "react-virtuoso": "^4.12.0",
     "recharts": "^2.13.0",
     "sass": "^1.79.5",
     "socket.io": "^4.8.0",
@@ -99,4 +101,3 @@
     "typescript": "^5.3.3"
   }
 }
-
