--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,6 +15,7 @@
     "@repo/typescript-config": "workspace:*",
     "@types/express": "^5.0.0",
     "@types/node": "^20.11.24",
+    "@types/pg": "^8.11.10",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.31.0",
     "tsconfig-paths": "^4.2.0",
@@ -22,8 +23,10 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@socket.io/postgres-adapter": "^0.4.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "pg": "^8.13.0",
     "reflect-metadata": "^0.2.2",
     "socket.io": "^4.8.0"
   }
