--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -28,10 +28,10 @@
     "@types/node": "^20.11.24",
     "eslint": "^8.57.0",
     "prisma": "^5.10.2",
+    "prisma-json-types-generator": "^3.1.1",
     "rimraf": "^5.0.5",
     "tsup": "^8.0.2",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   }
 }
-
